# 2026-p1-sajal1701

./: README.md  endpoints.http  pyproject.toml
todo/views/: routes.py
