[project]
name = "2026-p1-sajal1701"
version = "0.1.0"
description = ""
authors = [
    {name = "sajal1701",email = "72312297+sajal1701@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
